<?xml version="1.0"?>
<package format="3">
  <name>dsg_ros2_interfaces</name>
  <version>0.0.1</version>
  <description>ROS messages and services for dsg_ros2 package</description>
  <maintainer email="harle@isir.upmc.fr">Antoine Harlé</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
